--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "chromadb>=1.1.1",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.118.0",
     "google-genai>=1.41.0",
