--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.118.0",
     "google-genai>=1.41.0",
+    "motor>=3.7.1",
     "pydantic-ai[examples]>=1.0.14",
 ]
